<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".features.horario.crear_horario.HorarioCrearActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00BCD4">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarH"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:contentInsetStartWithNavigation="0dp"
            app:navigationIcon="@drawable/ic_close" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/aula"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textAula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/dia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFC107"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/dias"
            app:icon="@drawable/ic_fecha">
        </Button>

        <Button
            android:id="@+id/in_time1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/HorarioEntada"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:backgroundTint="#FFC107"
            android:textAlignment="center"
            app:icon="@drawable/ic_hor_add_white"
            android:textSize="20sp"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/in_time2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:backgroundTint="#FFC107"
            android:text="@string/HorarioSalida"
            app:icon="@drawable/ic_hor_add_white"
            android:textAlignment="center"
            android:textSize="20sp"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

</LinearLayout>
