<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.evaluacion.ActualizarEvaluacion.EvaluacionActualizarActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00BCD4">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarEv"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:contentInsetStartWithNavigation="0dp"
            app:navigationIcon="@drawable/ic_close" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_evaluacion"
            android:hint="@string/evaluacion"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textNomEvaAct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spinnerTipoAct"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:spinnerMode="dialog"
            android:layout_marginTop="5dp" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb1BAct"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="45dp"
                android:text="@string/rb1B" />

            <RadioButton
                android:id="@+id/rb2BAct"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:text="@string/rb2B" />

        </RadioGroup>

        <Button
            android:id="@+id/btnfecEvAct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="#00BCD4"
            android:textStyle="bold"
            android:textSize="20sp"
            app:icon="@drawable/ic_fecha"
            android:text="@string/fechaevaluacion"/>

        <Spinner
            android:id="@+id/spinnerEvaAct"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:spinnerMode="dialog" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_detalle_white"
            android:hint="@string/observacion"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textObsEvaAct"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:inputType="textMultiLine"/>

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

</LinearLayout>