<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="8dp"
    android:background="#00BCD4"
    android:padding="10dp"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="0.3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/PerInTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/periodoinicio"
                android:textSize="18sp"
                android:textStyle="italic"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/PerInTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                android:textSize="18sp"
                tools:text="03/12/2010" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/PerFinTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/periodofin"
                android:textSize="18sp"
                android:textStyle="italic"
                android:textColor="#FFFFFF"/>

            <TextView
                android:id="@+id/PerFinTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="18sp"
                tools:text="02/12/2011" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/editarPer"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_edit"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/editar" />

        <ImageView
            android:id="@+id/eliminarPer"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_delete"
            android:layout_gravity="center"
            android:contentDescription="@string/eliminar" />

    </LinearLayout>

</LinearLayout>