<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="8dp"
    android:background="#00BCD4"
    android:padding="10dp"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.3">

        <TextView
            android:id="@+id/nomAsigTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="Gestión Proyectos" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/creditosTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/creditos"
                android:layout_weight="0.1"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/credAsigTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="0.4"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="3" />

            <TextView
                android:id="@+id/horasTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/horas"
                android:textColor="#FFFFFF"
                android:layout_marginStart="10dp"
                android:layout_weight="0.1"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/horAsigTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:layout_weight="0.4"
                android:textStyle="bold"
                tools:text="4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/carreraTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/carrera"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/carreraAsigTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="Sistemas" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/editarAsig"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/editar"
            android:src="@drawable/ic_edit" />

        <ImageView
            android:id="@+id/eliminarAsig"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/eliminar"
            android:src="@drawable/ic_delete" />

    </LinearLayout>

</LinearLayout>