<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="horizontal"
    android:background="#00BCD4"
    android:padding="10dp"
    tools:context=".Features.Evaluacion.PresentarEvaluacion.EvaluacionListaRecycleViewAdapter"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.3">

        <TextView
            android:id="@+id/nomEvaTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            tools:text="Evaluación Metodologías Agiles" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/FechEvaTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/fechaevaluacion"
                android:textSize="16sp"
                android:textColor="#FFFFFF"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/FechEvaTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                tools:text="01 / 05 / 2021"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TipoEvaTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tipo"
                android:textSize="16sp"
                android:textColor="#FFFFFF"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/TipoEvaTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                tools:text="Presencial" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/editarEva"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/editar"
            android:src="@drawable/ic_edit" />

        <ImageView
            android:id="@+id/eliminarEva"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/eliminar"
            android:src="@drawable/ic_delete" />

    </LinearLayout>
</LinearLayout>