<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#00BCD4"
        android:padding="10dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/aulaTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/aula"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/AulaTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="111 " />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/HorEnTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/dias"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/HorDia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"
                    tools:text="10 : 00" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/editarHor"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginBottom="1dp"
                android:contentDescription="@string/editarHor"
                android:src="@drawable/ic_edit"/>

            <ImageView
                android:id="@+id/eliminarHor"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="1dp"
                android:contentDescription="@string/eliminarHor"
                android:src="@drawable/ic_delete" />

        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
